# JustDoIt

./: .gitignore  README.md  pyproject.toml
src/justdoit_textual/: app.py  db.py  main.py  models.py  parsing.py  styles.tcss  undo.py
src/justdoit_textual.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_app_helpers.py  test_db.py  test_parsing.py  test_recurrence.py  test_undo.py
