[project]
name = "justdoit-textual"
version = "0.1.0"
description = "Local-only JustDoIt TUI implemented with Textual"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.86.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
justdoit-textual = "justdoit_textual.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
